fixed corner coverings

--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,7 @@
 .header .corner-coverings {
   position: absolute;
   width: calc(100% - 36px);
-  top: 54px;
+  top: 52px;
   display: flex;
   justify-content: space-between;
 }
